--- a/CSS/quiz.css
+++ b/CSS/quiz.css
@@ -10,6 +10,7 @@ html{
     overflow-y: hidden;
     margin: 0;
     padding: 0;
+	overscroll-behavior: none;
 }
 * {
 	box-sizing: border-box;
